# dmuse-tech

./: .gitignore  Cargo.toml  README.md  next.config.js  package-lock.json  package.json
app/: globals.css  layout.tsx  page.tsx
app/[artist-slug]/: page.tsx
app/[artist-slug]/[song-slug]/: page.tsx
app/api/pin-metadata/: route.ts
app/dedication/: page.tsx
app/dedication/[tokenId]/: page.tsx
components/ClapButton/: ClapButton.tsx
components/ClapModal/: ClapModal.tsx
components/DedicateButton/: DedicateButton.tsx  index.tsx
components/DedicateModal/: DedicateModal.tsx  index.ts
components/SongCard/: SongCard.tsx
components/SongsList/: SongsList.tsx  index.tsx
components/WalletConnection/: WalletConnection.tsx  index.tsx
const/: index.ts
context/: DMuseContract.tsx  index.ts
contracts/dmuseminter/: Cargo.toml  lib.rs
data/: songs.ts
frontend/: .env.example  .gitignore  dmuseminter.json  next.config.js
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/dedications/: page.tsx
frontend/components/ClapButton/: ClapButton.tsx  index.tsx
frontend/components/ClapModal/: index.ts
frontend/components/DMuseAudio/: DMuseAudio.module.css  index.tsx
frontend/components/Header/: Header.tsx
frontend/const/: index.ts
frontend/constants/: breakpoints.ts
frontend/context/: DMuseContract.tsx
frontend/data/: songs.ts
frontend/hooks/: index.ts  useMediaQueries.ts
frontend/types/: index.ts
helpers/: getAbiMessage.ts
hooks/: useDMuseContract.ts
logics/: Cargo.toml
logics/traits/: payable_mint.rs
types/: DMuseContract.ts
(+11 files in other folders)
